--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,5 +1,5 @@
 [deps]
-Astrometry = "f1a567a2-b8c3-46a6-a8e4-0d50b742dea6"
+AstroCouch = "49c2c03a-1c99-4e96-bd03-21227f8707f2"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 
 [compat]
