--- a/docs/Makefile
+++ b/docs/Makefile
@@ -2,6 +2,10 @@ all:
 	julia --project=. -e 'import Pkg; Pkg.develop(path=".."); Pkg.instantiate()'
 	julia --project=. make.jl
 
+debug:
+	julia --project=. -e 'import Pkg; Pkg.develop(path=".."); Pkg.instantiate()'
+	JULIA_DEBUG=Documenter julia --project=. make.jl
+
 clean:
 	rm -rf build/
 
